base/test-tools.yaml
apiVersion: v1
kind: Pod
metadata:
  name: debug-pod
  namespace: mail-stack
spec:
  containers:
  - name: tools
    image: nicolaka/netshoot
    command: ["tail", "-f", "/dev/null"] # Garde le pod en vie indéfiniment
    resources:
      limits:
        cpu: "200m"
        memory: "128Mi"
